--- a/src/components/Properties_section/properties__slider/Properties_slider.scss
+++ b/src/components/Properties_section/properties__slider/Properties_slider.scss
@@ -11,7 +11,7 @@
 
       .slick-track {
         // transform: translateX(20px) !important;
-        
+
       }
     }
 
@@ -79,6 +79,11 @@
       object-position: center;
       width: 100%;
       height: 100%;
+      transition: all .23s ease 0s;
+      cursor: pointer;
+      &:hover {
+        scale: 1.04;
+      }
     }
   }
 
