--- a/src/components/MultipleItems.scss
+++ b/src/components/MultipleItems.scss
@@ -15,6 +15,7 @@
 .card {
   margin-right: 30px;
   display: flex;
+  min-height: 400px;
   flex-direction: column;
   gap: 50px;
   border: 1px solid gray;
