--- a/src/components/HomePoster/HomePoster.scss
+++ b/src/components/HomePoster/HomePoster.scss
@@ -1,9 +1,16 @@
+.container {
+  max-width: 100%;
+}
+
+body {
+  overflow-x: hidden;
+}
+
 .HomePoster {
   &_container {
     display: flex;
     background-color: #141414;
     height: 814px;
-    gap: 80px;
     font-family: "Urbanist", sans-serif;
   }
   &_contain {
@@ -13,15 +20,18 @@
     width: 100%;
   }
   &_textContent {
+    padding: 30px 10px 10px 160px;
     width: 784px;
   }
   &_circle {
     display: flex;
     align-items: center;
-    justify-content: center;
   }
   &_circleImg {
+    margin-bottom: 390px;
     width: 140px;
+    z-index: 1;
+    margin-right: -70px;
     height: 140px;
   }
   &_heading {
@@ -30,41 +40,37 @@
     font-size: 60px;
     font-family: "Urbanist", sans-serif;
     color: #ffffff;
-    font-weight: 600;
+    font-weight: 900;
     line-height: 62px;
     text-align: left;
   }
   &_paragraph {
     width: 758px;
-
     color: #999;
+    margin-top: 24px;
     font-size: 18px;
-    font-weight: 500;
+    font-weight: 900;
     line-height: 26px;
     text-align: left;
   }
   &_buttons {
+    padding: 10px 10px 10px 160px;
     width: 100%;
-    margin: 50px auto;
+    margin: 36px auto 40px;
   }
   &_head {
     width: 140px;
     height: 60px;
-    gap: 8px;
     color: #ffffff;
     border-radius: 12px;
-    border: 1px 0px 0px 0px;
-    opacity: 0px;
+    border: 1px solid #262626;
     background-color: #141414;
   }
   &_includes {
     height: 27px;
-    gap: 0px;
-    opacity: 0px;
-
     font-size: 18px;
-    font-weight: 500;
-    line-height: 17px;
+    font-weight: 300;
+    line-height: 24px;
     text-align: center;
   }
   &_btn {
@@ -72,39 +78,42 @@
     height: 60px;
     font-size: 16px;
     border-radius: 12px;
-    margin-left: 26px;
+    border: 1px solid #262626;
+    margin-left: 20px;
     background-color: #703bf7;
     color: #ffffff;
-
     font-weight: 600;
   }
   &_include {
     width: 143px;
     height: 27px;
+    font-weight: 300;
   }
   &_score {
     display: flex;
+    padding: 4px 10px 10px 160px;
     gap: 20px;
   }
   &_text {
-    width: 204px;
-    height: 80px;
+    width: 234px;
+    height: 116px;
     padding: 10px;
-    font-weight: 500;
+    font-weight: 700;
     line-height: 12px;
     border-radius: 12px;
     border: 3px solid #262626;
     background: #1a1a1a;
-
     color: #999999;
   }
   &_number {
-    font-weight: 700;
+    font-weight: 900;
     color: #ffffff;
   }
-
+  &_bgImage {
+    margin-right: 100px;
+  }
   &_image {
-    width: 882px;
+    width: 932px;
     background-repeat: no-repeat;
     height: 814px;
     background: linear-gradient(238.21deg, #2a213f 8.76%, rgba(25, 25, 25, 0) 50.09%);
