--- a/src/components/Slider_reviews/SliderReviews.scss
+++ b/src/components/Slider_reviews/SliderReviews.scss
@@ -1,9 +1,32 @@
+@import "../../sass/color";
+
 .sliderReviews{
-	&__text{
+	&__head{
 		display: flex;
-		gap: 20px;
-		& > div{
-			width: 1240px;
+		align-items: center;
+		position: relative;
+		gap: 100px;
+	}
+	&__title{
+		margin-bottom: 16px;
+	}
+	&__text{
+		font-size: 18px;
+		color: $main-text-color;
+		width: 1236px;
+	}
+	&__btn{
+		display: inline-block;
+		cursor: pointer;
+		border: 1px solid $border-grey;
+		padding: 18px 24px 18px 24px;
+		background-color: $button-background;
+		border-radius: 10px;
+		color: $main-text-color;
+		margin-top: 75px;
+		transition: 0.3s;
+	  &:hover{
+			scale: 1.1;
 		}
 	}
 }
