--- a/src/components/Slider_slick/SliderSlick.scss
+++ b/src/components/Slider_slick/SliderSlick.scss
@@ -1,29 +1,54 @@
-.slick{	
-    &-slider{
-        margin-top: 100px;
-        height: 400px;
-        padding: 1rem;
-        padding: 1em;
+@import '../../sass/color';
+
+.slick{
+  &-slider{
+    margin-top: 100px;
+    padding: 1rem;
+    padding: 1em;
+  }
+  &-list{
+    height: 100%;
+    width: 100%;
+  }
+  &-track{
+    display: flex;
+    gap: 40px;
+    height: 100%;
+    width: 100%;
+  }
+  &-arrow{
+    position: absolute;
+    top: 100%;
+  }
+  &-slide{
+    border: 1px solid $border-grey;
+    padding: 50px;
+    border-radius: 12px;
+    div{
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      justify-content: center;
+      gap: 30px;
+      text-align: left;
+      p{
+        font-size: 17px;
+      }
     }
-    &-list{
-        height: 100%;
-        width: 100%;
+  }
+  &__btn{
+    button{
+      display: inline-block;
+      cursor: pointer;
+      border: 1px solid $border-grey;
+      padding: 18px 24px 18px 24px;
+      background-color: $button-background;
+      border-radius: 10px;
+      color: $main-text-color;
+      transition: 0.3s;
+      &:hover{
+        scale: 1.1;
+      }
     }
-    &-track{
-        height: 100%;
-    }
-    &-arrow{
-        
-    }
-    &-slide{
-        div{
-            margin: 10px;
-            .star{
-                overflow: hidden;
-                border-radius: 10px;
-                outline: 1px solid black;
-                outline-offset: -2px;
-            }
-        }
-    }
+	}
 }
