--- a/src/components/Slider_reviews/SliderReviews.scss
+++ b/src/components/Slider_reviews/SliderReviews.scss
@@ -1,35 +1,43 @@
 @import "../../sass/color";
 
-.sliderReviews{
-	&__head{
-		display: flex;
-		align-items: center;
-		position: relative;
-		gap: 100px;
-	}
-	&__title{
-		margin-bottom: 16px;
-	}
-	&__text{
-		font-size: 18px;
-		color: $main-text-color;
-		width: 1236px;
-	}
-	&__btn{
-		display: inline-block;
-		cursor: pointer;
-		border: 1px solid $border-grey;
-		padding: 18px 24px 18px 24px;
-		background-color: $button-background;
-		border-radius: 10px;
-		color: $main-text-color;
-		margin-top: 75px;
-		transition: 0.3s;
-	  &:hover{
-			scale: 1.1;
-		}
-	}
-	&__slider{
-		margin-top: 100px;
-	}
+.sliderReviews {
+  margin-top: 50px;
+  &__head {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+    gap: 100px;
+    margin: 0 auto;
+    width: 96%;
+  }
+  &__title {
+    margin-bottom: 16px;
+  }
+  &__text {
+    font-size: 18px;
+    line-height: 27px;
+    color: $text-color-grey;
+    width: 1236px;
+  }
+  &__btn {
+    display: inline-block;
+    cursor: pointer;
+    border: 1px solid $border-grey;
+    padding: 18px 24px;
+    background-color: $button-background;
+    border-radius: 10px;
+    color: $main-text-color;
+    margin-top: 75px;
+    font-size: 18px;
+    font-weight: 500;
+    transition: 0.3s;
+    &:hover {
+      scale: 1.03;
+      border-color: royalblue;
+    }
+  }
+  &__slider {
+    margin-top: 100px;
+  }
 }
